examples/errors/invalid_assign/main.lc

function main() {
    (1 + 1) = 2;
}
